[gd_scene load_steps=4 format=2]

[ext_resource path="res://Logic/Scripts de escenas/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://images/AppSPR/spr_main_menu.png" type="Texture" id=2]
[ext_resource path="res://Logic/Escenas/Popup.tscn" type="PackedScene" id=3]

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spr_main_menu" type="TextureRect" parent="."]
margin_right = 316.0
margin_bottom = 476.0
texture = ExtResource( 2 )
expand = true

[node name="Button" type="Button" parent="."]
margin_left = 35.7025
margin_top = 373.0
margin_right = 155.702
margin_bottom = 412.0
rect_pivot_offset = Vector2( 60, -93 )
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 164.95
margin_top = 372.05
margin_right = 284.95
margin_bottom = 411.05
rect_pivot_offset = Vector2( 60, -93 )
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 118.0
margin_top = 425.0
margin_right = 307.0
margin_bottom = 466.0
rect_pivot_offset = Vector2( 60, -93 )
flat = true

[node name="Popup" parent="." instance=ExtResource( 3 )]
margin_left = 18.2945
margin_top = 55.3832
margin_right = 291.294
margin_bottom = 465.383
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
